// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test tinymce component render a TinyMCE component 1`] = `
<div
  className="form__group "
>
  <label
    className="form__question form__question--choice_field select"
    htmlFor="test name"
    required=""
  >
    <span>
      test label
    </span>
  </label>
  <HelperComponent />
  <Editor
    cloudChannel="5"
    id="test name"
    init={
      Object {
        "a": 1,
        "menubar": false,
      }
    }
    initialValue="abc"
    onEditorChange={[Function]}
  />
</div>
`;

exports[`Test tinymce component with required render a TinyMCE component with required 1`] = `
<div
  className="form__group "
>
  <label
    className="form__question form__question--choice_field select"
    htmlFor="test name"
    required=""
  >
    <span>
      test label
    </span>
    <span
      className="form__required"
    >
       *
    </span>
  </label>
  <HelperComponent />
  <Editor
    cloudChannel="5"
    id="test name"
    init={
      Object {
        "a": 1,
        "menubar": false,
      }
    }
    initialValue="abc"
    onEditorChange={[Function]}
  />
</div>
`;
